[package]
name = "zenoh-flow"
version = "0.1.0"
repository = "https://github.com/eclipse-zenoh/zenoh-flow"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "gabrik <gabriele.baldoni@gmail.com>",
           "Julien Loudet <julien.loudet@adlinktech.com>",]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh-Flow: zenoh-based data-flow programming framework for computations that span from the cloud to the device."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.9.0", features = ["attributes"] }
async-trait = "0.1.50"
bincode = "1.3.3"
derive_more = "0.99.10"
env_logger = "0.8.3"
event-listener = "2.5.1"
flume = "0.10"
futures = "0.3.15"
libloading = "0.7.0"
log = "0.4"
paste = "1.0"
petgraph = "0.5.1"
serde = { version = "1.0.55", features = ["derive"] }
serde_derive = "1.0.55"
serde_yaml = {version = "0.8.13"}
structopt = "0.3.21"
typetag = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
zenoh-flow-macros = {path = "../zenoh-flow-macros"}

[build-dependencies]
rustc_version = "0.4.0"

[[bin]]
name = "runtime"
